--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
 .login-button{
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   margin: 20px;
+}
+
+.login-button > *{
+  cursor: pointer;
 }
 
 .nav-section{
@@ -11,7 +16,11 @@
 
 .menu-list{
   display: flex;
+  justify-content: center;
+  align-items: center;
   list-style-type: none;
+  padding-left: 0;
+  margin-bottom: 0;
 }
 
 .menu-list li{
@@ -25,6 +34,8 @@
 
 .search-box{
   display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 23px;
   padding: 3px;
   border-bottom: 1px solid black;
@@ -38,4 +49,68 @@
 
 .search-box input:focus{
   outline: none;
+}
+
+.item-card{
+  padding: 0 0;
+  margin-bottom: 1.5em;
+}
+
+.item-card:hover{
+  transform: scale(1.05);
+}
+
+.item-card img{
+  width: 100%;
+}
+
+.choice-area{
+  font-size: smaller;
+  height: 10px;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.new-area{
+  font-size: smaller;
+  height: 10px;
+  display: block;
+}
+
+.product-img{
+  display: flex;
+  justify-content: flex-end;
+}
+
+/* .product-info > *{
+  margin-bottom: 1em;
+} */
+
+.product-title{
+  font-size: larger;
+  margin-bottom: .5em;
+}
+
+.product-price{
+  font-size: larger;
+  font-weight: 500;
+  margin-bottom: .5em;
+}
+
+#dropdown-basic-button{
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+  margin-top: .5em;
+  margin-bottom: .5em;
+}
+
+#dropdown-basic-button:hover{
+  background-color: black;
+  color: white;
+  border: 1px solid black;
+}
+
+#purchase-btn{
+  width: 100%;
 }
