--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,11 @@
   justify-content: center;
 }
 
+.nav-section img{
+  width: 100px;
+  cursor: pointer;
+}
+
 .menu-list{
   display: flex;
   justify-content: center;
